# small-render

./: .gitignore  CMakeLists.txt  LICENSE  README.md
LICENSES/: THIRD_PARTY_NOTICES.txt
resources/: smallrender.rc
resources/icons/: cube.ai
resources/plugins/afterEffects/: SmallRender.jsx
resources/plugins/blender/: SmallRender.py
resources/templates/: after-effects-aerender.json  after-effects.json  blender-5.0-all-options.json  blender-5.0-union.json
sr-agent/: Cargo.toml
sr-agent/src/: executor.rs  main.rs  messages.rs  parser.rs  watchdog.rs
sr-agent/src/ipc/: mod.rs  windows.rs
src/core/: atomic_file_io.cpp  atomic_file_io.h  config.h  heartbeat.h  ipc_server.cpp  ipc_server.h  job_types.h  message_dedup.h  monitor_log.cpp  monitor_log.h  node_identity.cpp  node_identity.h  platform.cpp  platform.h  single_instance.cpp  single_instance.h  system_tray.cpp  system_tray.h  udp_notify.cpp  udp_notify.h
src/monitor/: agent_supervisor.cpp  agent_supervisor.h  command_manager.cpp  command_manager.h  dispatch_manager.cpp  dispatch_manager.h  farm_init.cpp  farm_init.h  heartbeat_manager.cpp  heartbeat_manager.h  job_manager.cpp  job_manager.h  main.cpp  monitor_app.cpp  monitor_app.h  render_coordinator.cpp  render_coordinator.h  submission_manager.cpp  submission_manager.h  template_manager.cpp  template_manager.h  ui_data_cache.cpp  ui_data_cache.h
src/monitor/ui/: dashboard.cpp  dashboard.h  farm_cleanup_dialog.cpp  farm_cleanup_dialog.h  job_detail_panel.cpp  job_detail_panel.h  job_list_panel.cpp  job_list_panel.h  log_panel.cpp  log_panel.h  node_panel.cpp  node_panel.h  settings_panel.cpp  settings_panel.h  style.cpp  style.h
